--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,17 +36,16 @@ dependencies {
     //testImplementation 'junit:junit:4.12'
     //androidTestImplementation 'com.android.support.test:runner:1.0.2'
     //androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.google.code.gson:gson:2.6.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
     implementation 'neshan-android-sdk:mobile-sdk:0.9.5'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
     implementation 'com.github.zcweng:switch-button:0.0.3@aar'
     implementation 'com.github.florent37:shapeofview:1.3.2'
     implementation 'info.androidhive:fontawesome:0.0.5'
     implementation 'com.android.support:design:28.0.0'
-    implementation 'com.google.android.gms:play-services-location:16.0.0'
-    implementation 'com.google.android.gms:play-services-gcm:15.0.1'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'com.google.android.gms:play-services-gcm:15.0.1'
     implementation 'com.karumi:dexter:4.2.0'
+    implementation 'uk.co.chrisjenx:calligraphy:2.1.0'
 }
