--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name=".activity.ArchiveActivity"/>
         <activity android:name=".activity.SupportActivity"/>
         <activity android:name=".activity.SearchActivity"/>
+        <activity android:name=".activity.FinancialActivity"/>
     </application>
 
 </manifest>
