--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ allprojects {
         jcenter()
         mavenCentral()
         maven { url "https://dl.bintray.com/neshan/neshan-android-sdk"}
+        maven { url "https://jitpack.io" }
 
     }
 }
