put request api implementation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         <activity android:name=".activity.account.LoginActivity" />
         <activity android:name=".activity.report.ArchiveActivity"/>
         <activity android:name=".activity.main.SendRequestActivity"/>
-        <activity android:name=".activity.help.SupportActivity"/>
+        <activity android:name=".activity.help.SupActivity"/>
         <activity android:name=".activity.main.SearchActivity"/>
         <activity android:name=".activity.finance.FinancialActivity"/>
         <activity android:name=".activity.finance.GiftCardActivity"/>
