--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.zarinpal:purchase:0.0.8-beta'
+    implementation 'com.ms-square:expandableTextView:0.1.4'
 }
