--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.zarinpal:purchase:0.0.8-beta'
     implementation 'com.ms-square:expandableTextView:0.1.4'
+    implementation 'me.cheshmak:analytics:4.+'
+    implementation "com.google.firebase:firebase-messaging:17.6.0"
+    implementation "com.google.firebase:firebase-ads:17.2.0"
 }
