--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.jabari.client">
+
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:name=".custom.CustomFontApplication"
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@drawable/splash_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
         <activity android:name=".activity.main.FirstActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,32 +30,44 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.finance.ManagementActivity"/>
-        <activity android:name=".activity.main.StartPosActivity"/>
-        <activity android:name=".activity.main.MainActivity"/>
-        <activity android:name=".activity.report.AddressActivity"/>
-        <activity android:name=".activity.help.AboutUsActivity"/>
-        <activity android:name=".activity.finance.IntroductionActivity"/>
-        <activity android:name=".activity.main.DetailsActivity"/>
+        <activity android:name=".activity.finance.ManagementActivity" />
+        <activity android:name=".activity.main.StartPosActivity" />
+        <activity android:name=".activity.main.MainActivity">
+            <meta-data
+                android:name="cheshmakPush"
+                android:value="openActivityOnPush" />
+        </activity>
+        <activity android:name=".activity.report.AddressActivity" />
+        <activity android:name=".activity.help.AboutUsActivity" />
+        <activity android:name=".activity.finance.IntroductionActivity" />
+        <activity android:name=".activity.main.DetailsActivity" />
         <activity android:name=".activity.account.LoginActivity" />
-        <activity android:name=".activity.report.ArchiveActivity"/>
-        <activity android:name=".activity.main.SendRequestActivity"/>
-        <activity android:name=".activity.help.SupActivity"/>
-        <activity android:name=".activity.main.SearchActivity"/>
-        <activity android:name=".activity.finance.FinancialActivity"/>
-        <activity android:name=".activity.finance.GiftCardActivity"/>
-        <activity android:name=".activity.account.ProfileActivity"/>
-        <activity android:name=".activity.finance.IncreaseCreditActivity"/>
-        <activity android:name=".activity.report.ArchiveDetailActivity"/>
+        <activity android:name=".activity.report.ArchiveActivity" />
+        <activity android:name=".activity.main.SendRequestActivity" />
+        <activity android:name=".activity.help.SupActivity" />
+        <activity android:name=".activity.main.SearchActivity" />
+        <activity android:name=".activity.finance.FinancialActivity" />
+        <activity android:name=".activity.finance.GiftCardActivity" />
+        <activity android:name=".activity.account.ProfileActivity" />
+        <activity android:name=".activity.finance.IncreaseCreditActivity" />
+        <activity android:name=".activity.report.ArchiveDetailActivity" />
         <activity android:name=".activity.finance.PaymentActivity">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:scheme="return" android:host="digipeyk_client"/>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="digipeyk_client"
+                    android:scheme="return" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.main.EndPosActivity"/>
+        <activity android:name=".activity.main.EndPosActivity" />
+
+        <service
+            android:name="me.cheshmak.android.sdk.core.push.CheshmakFirebaseMessagingService"
+            tools:node="remove" />
     </application>
 
 </manifest>
