--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,11 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.2'
-        
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,8 +19,13 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
-        maven { url "https://dl.bintray.com/neshan/neshan-android-sdk"}
+        maven { url "https://dl.bintray.com/neshan/neshan-android-sdk" }
         maven { url "https://jitpack.io" }
+
+        maven {
+            url 'https://repository.cheshmak.me'
+
+        }
 
     }
 }
