--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -49,6 +50,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.zarinpal:purchase:0.0.8-beta'
     implementation 'com.ms-square:expandableTextView:0.1.4'
+    implementation 'com.android.support:multidex:1.0.3'
     implementation 'me.cheshmak:analytics:4.+'
     implementation "com.google.firebase:firebase-messaging:17.6.0"
     implementation "com.google.firebase:firebase-ads:17.2.0"
